# axion

./: .dockerignore  .env.example  .gitignore  AGENT.md  Makefile  README.md  SPEC.md  axion.dockerfile  axion_alembic.dockerfile  axion_server.dockerfile  axion_ui.dockerfile  compose.dev.yaml  compose.dev.yml  compose.yaml  compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
alembic/: env.py
axion/: README.md  alembic.ini  axion_alembic.dockerfile  axion_server.dockerfile  pyproject.toml
axion/examples/: README.md  champion_comparison.py  evaluation_workflow.py  quickstart.py
axion/src/axion/: __init__.py  api.py  client.py
axion/src/axion/schemas/: __init__.py  comparison_indicator.py  run.py
axion/src/axion/services/: __init__.py  _http.py  artifact.py  batch.py  comparison_indicator.py  dp.py  org.py  pin.py  project.py  quality_metric.py  run.py
axion/src/axion_alembic/versions/: 0d7469ec9bff_initial_schema.py
axion/src/axion_server/apps/api/: deps.py
axion/src/axion_server/apps/api/routers/: __init__.py  batches.py  dp.py  projects.py  runs.py
axion/src/axion_server/gateways/: __init__.py
axion/src/axion_server/gateways/storage/: s3.py
axion/src/axion_server/ops/dp/: runner.py
axion/src/axion_server/repos/: __init__.py  quality_metric.py  run_pin.py
axion/src/axion_server/repos/models/: base.py  entities.py
axion/src/axion_server/shared/domain/: __init__.py
axion/src/axion_server/shared/libs/: __init__.py  config.py
axion/tests/: test_high_level_api.py
axion/tests/apps/api/: test_deps.py
axion/tests/apps/api/routers/: test_artifacts.py  test_batches.py  test_projects.py  test_quality_metrics.py
axion/tests/shared/libs/: test_utils.py
axion_lab/: README.md  alembic.ini  axion_lab.dockerfile  axion_lab_alembic.dockerfile  axion_lab_server.dockerfile  pyproject.toml
axion_lab_ui/: README.md  axion_lab_ui.dockerfile  index.html  package-lock.json  package.json  vite.config.ts
axion_ui/: README.md  package.json  (+3 more)
(+308 files in other folders)
