[project]
name = "axion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "elda27", email = "kaz.birdstick@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
axion = "axion:main"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"
